@@ -59,10 +59,9 @@ Separating_group_spanner::find_rods (Item *r, SCM next, Real padding)
 
 	  rod.distance_ = li[RIGHT] - ri[LEFT] + padding;
 
-	  if ( rod.distance_ > 0.0)
+	  if (rod.distance_ > 0.0)
 	    rod.add_to_cols ();
-	  else
-	    break;
+	  break;
 	}
 
       /*
